--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
