--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix"
   },
   "dependencies": {
+    "@nestjsx/crud-request": "^5.0.0-alpha.3",
     "@nuxtjs/auth-next": "^5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
@@ -22,6 +23,8 @@
     "nuxt": "^2.15.8",
     "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.14",
+    "vue-api-queries": "^1.2.1",
+    "vue-api-query": "^1.10.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
